--- a/BookwormsOnline_Trial4/BookwormsOnline_Trial4/Views/Home/Register.cshtml
+++ b/BookwormsOnline_Trial4/BookwormsOnline_Trial4/Views/Home/Register.cshtml
@@ -69,7 +69,7 @@
 
                 <div class="mb-3">
                     <label class="form-label" asp-for="Photo">Upload Profile Photo (.JPG only)</label>
-                    <input type="file" asp-for="Photo" class="form-control" accept=".jpg,.jpeg" />
+                    <input type="file" asp-for="Photo" class="form-control" accept=".jpg,.jpeg,.pdf" />
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
 
