FEATURE: Change Password
- [x]  mplement change password functionality
- [x]  Enforce password history (avoid password reuse, max 2 password history)
- [x]  Enforce minimum and maximum password age policies

--- a/BookwormsOnline_Trial4/BookwormsOnline_Trial4/Views/Home/Home.cshtml
+++ b/BookwormsOnline_Trial4/BookwormsOnline_Trial4/Views/Home/Home.cshtml
@@ -78,6 +78,10 @@
             <form id="logoutForm" method="post" asp-action="ConfirmLogout" asp-controller="Home">
                 <button type="submit" class="btn btn-danger">Logout</button>
             </form>
+            <form method="get" asp-action="ChangePassword" asp-controller="Home">
+                <button type="submit" class="btn btn-warning">Change Password</button>
+            </form>
+
         }
     </fieldset>
 </div>
