--- a/BookwormsOnline_Trial4/BookwormsOnline_Trial4/Views/Home/Login.cshtml
+++ b/BookwormsOnline_Trial4/BookwormsOnline_Trial4/Views/Home/Login.cshtml
@@ -46,6 +46,14 @@
                 <div class="mb-3">
                     <button type="submit" class="btn btn-primary">Login</button>
                 </div>
+
+
+                <!-- 🔹 Forgot Password Button -->
+                <div class="mb-3">
+                    <a asp-controller="Home" asp-action="ForgotPassword" class="btn btn-link">Forgot Password?</a>
+                </div>
+                
+                
             </form>
         </div>
     </div>
